# flyto-pro-core

./: .gitignore  LICENSE  README.md  generate_real.py  pyproject.toml  test_closed_loop.py  test_stress.py  test_zapier_convert.py
output/: 01_Split_text_into_lines_and_generate_a_QR_.yaml  02_Fetch_API_health_check_and_send_Slack_no.yaml  03_AI_summarize_sales_data_and_email_to_man.yaml  04_Fetch_JSON_from_API_and_save_to_file.yaml  05_Split_a_list_of_URLs_and_fetch_each_one.yaml  closedloop_01.yaml  closedloop_02.yaml  closedloop_03.yaml  closedloop_04.yaml  closedloop_05.yaml  closedloop_06.yaml  closedloop_07.yaml  closedloop_08.yaml  test_input.txt
src/flyto_pro_core/: __init__.py
src/flyto_pro_core/agent_runtime/: __init__.py
src/flyto_pro_core/agent_runtime/contracts/: __init__.py  capability_token.py  contract_meta.py  decision_card.py  execution_bundle.py  plan_contract.py  plan_proposal.py  (+1 more)
src/flyto_pro_core/config/: __init__.py  constants.py  fix_patterns.json  framework_rules.json  module_corrections.json  service_templates.json  settings.py  timeouts.py
src/flyto_pro_core/contract/: __init__.py  engine.py
src/flyto_pro_core/core/: __init__.py  container.py  safe_access.py  validators.py
src/flyto_pro_core/cost/: __init__.py  controller.py  pricing.py
src/flyto_pro_core/factory/: __init__.py  autofix.py  converter.py  enrich.py  models.py  pipeline.py  recipe.py  selector.py
src/flyto_pro_core/interfaces/: __init__.py  llm.py  quality.py  storage.py
tests/: conftest.py  test_factory.py  test_factory_integration.py  test_factory_output.py
(+56 files in other folders)
